📱 Упрощение главной страницы: убраны технические детали, все переведено на русский

--- a/public/index.html
+++ b/public/index.html
@@ -1394,14 +1394,13 @@
                     <svg class="card-icon" viewBox="0 0 24 24" fill="currentColor">
                         <path d="M12,2L13.09,8.26L20,9L13.09,9.74L12,16L10.91,9.74L4,9L10.91,8.26L12,2Z" />
                     </svg>
-                    <h2 class="card-title">🎯 Новая система опыта v2.0</h2>
+                    <h2 class="card-title">🎖️ Детективные звания</h2>
                 </div>
                 <p class="card-description">
-                    <strong>📊 Опыт ≠ Очки:</strong> Отдельная система прогрессии<br>
-                    <strong>🚀 20 рангов:</strong> От Подозреваемого до Легенды<br>
-                    <strong>⚡ Множители:</strong> До +500% опыта за мастерство<br>
-                    <strong>🎯 Специализации:</strong> Мастерство по типам дел<br>
-                    <strong>⚖️ Анти-фарм:</strong> Качество важнее количества
+                    <strong>🚀 20 званий:</strong> От Подозреваемого до Легенды<br>
+                    <strong>📊 Прогресс:</strong> Каждое дело приближает к новому званию<br>
+                    <strong>🎯 Мастерство:</strong> Специализируйтесь на разных типах дел<br>
+                    <strong>🏆 Достижения:</strong> Разблокируйте награды за успехи
                 </p>
             </div>
 
@@ -1412,15 +1411,14 @@
                         <path
                             d="M5,16H3V4H20V6H18V16H5M18,6V16H15V4H20V6H18M3,16V19H4V18H5V20H4V21H18V20H17V18H18V19H19V16H3Z" />
                     </svg>
-                    <h2 class="card-title">🔥 Система множителей опыта</h2>
+                    <h2 class="card-title">🔥 Бонусы за качество</h2>
                 </div>
                 <p class="card-description">
-                    <strong>🎯 Идеальная игра (5/5):</strong> +50% опыта<br>
-                    <strong>⚡ Быстрая реакция (&lt;30 сек):</strong> +30% опыта<br>
-                    <strong>🏆 Hard дела:</strong> +40%, Expert +60%<br>
-                    <strong>🔥 Серии побед (3+):</strong> до +100% опыта<br>
-                    <strong>🌅 Первая игра дня:</strong> +25% опыта<br>
-                    <strong>📅 Выходные:</strong> +10% бонус
+                    <strong>🎯 Идеальное решение:</strong> Дополнительный опыт<br>
+                    <strong>⚡ Быстрая реакция:</strong> Бонус за скорость<br>
+                    <strong>🏆 Сложные дела:</strong> Больше наград<br>
+                    <strong>🔥 Серии побед:</strong> Накопительные бонусы<br>
+                    <strong>🌅 Ежедневная игра:</strong> Особые награды
                 </p>
             </div>
 
@@ -1431,15 +1429,14 @@
                         <path
                             d="M9,22A1,1 0 0,1 8,21V18H4A2,2 0 0,1 2,16V4C2,2.89 2.9,2 4,2H20A2,2 0 0,1 22,4V16A2,2 0 0,1 20,18H13.9L10.2,21.71C10,21.9 9.75,22 9.5,22H9M6,12V14H18V12H6M6,9V11H18V9H6M6,6V8H18V6H6Z" />
                     </svg>
-                    <h2 class="card-title">💎 Система очков (обновлено)</h2>
+                    <h2 class="card-title">💎 Система очков</h2>
                 </div>
                 <p class="card-description">
                     <strong>🎯 Базовые очки:</strong> 100 за правильный ответ<br>
-                    <strong>⚡ Бонус скорости:</strong> до +75 очков (прогрессивно)<br>
-                    <strong>🎖️ Бонус сложности:</strong> Medium +25, Hard +50<br>
-                    <strong>💫 Бонус совершенства:</strong> до +25 очков<br>
-                    <strong>👑 Максимум:</strong> 250 очков за идеальное дело!<br>
-                    <strong>🛡️ Анти-фарм:</strong> Штрафы за чрезмерную игру
+                    <strong>⚡ Бонус скорости:</strong> До +75 очков за быстроту<br>
+                    <strong>🎖️ Бонус сложности:</strong> Средний +25, Сложный +50<br>
+                    <strong>💫 Идеальное дело:</strong> До +25 дополнительных очков<br>
+                    <strong>👑 Максимум:</strong> 250 очков за одно дело!
                 </p>
             </div>
         </div>
@@ -1454,7 +1451,7 @@
                     </svg>
                 </div>
                 <div class="mini-content">
-                    <div class="mini-title">🎖️ 20 детективных рангов</div>
+                    <div class="mini-title">🎖️ 20 детективных званий</div>
                     <div class="mini-desc">От Подозреваемого до Легенды</div>
                 </div>
             </div>
@@ -1467,8 +1464,8 @@
                     </svg>
                 </div>
                 <div class="mini-content">
-                    <div class="mini-title">🎯 Мастерство по типам дел</div>
-                    <div class="mini-desc">5 специализаций × 10 уровней</div>
+                    <div class="mini-title">🎯 Специализации детектива</div>
+                    <div class="mini-desc">5 типов дел для изучения</div>
                 </div>
             </div>
 
@@ -1480,7 +1477,7 @@
                     </svg>
                 </div>
                 <div class="mini-content">
-                    <div class="mini-title">⚖️ Умная анти-фарм система</div>
+                    <div class="mini-title">⚖️ Честная система</div>
                     <div class="mini-desc">Качество важнее количества</div>
                 </div>
             </div>
@@ -1492,8 +1489,8 @@
                     </svg>
                 </div>
                 <div class="mini-content">
-                    <div class="mini-title">🔥 Экспоненциальная прогрессия</div>
-                    <div class="mini-desc">Уровень 20: ~3700 игр</div>
+                    <div class="mini-title">🔥 Постепенный рост</div>
+                    <div class="mini-desc">Каждое звание - достижение</div>
                 </div>
             </div>
         </div>
@@ -1505,54 +1502,54 @@
                     <path
                         d="M12,6.5A2.5,2.5 0 0,1 14.5,9A2.5,2.5 0 0,1 12,11.5A2.5,2.5 0 0,1 9.5,9A2.5,2.5 0 0,1 12,6.5M12,2A7,7 0 0,1 19,9C19,14.25 12,22 12,22C12,22 5,14.25 5,9A7,7 0 0,1 12,2M12,4A5,5 0 0,0 7,9C7,13 12,19.71 12,19.71C12,19.71 17,13 17,9A5,5 0 0,0 12,4Z" />
                 </svg>
-                <h3>🎖️ Новая система рангов (20 уровней)</h3>
+                <h3>🎖️ Детективная карьера (20 званий)</h3>
             </div>
             <div class="methods-grid">
                 <div class="method-item">
                     <div class="method-icon">🔰</div>
-                    <div class="method-name">Подозреваемый (Ур. 1)</div>
-                    <div class="method-exp">500 XP</div>
+                    <div class="method-name">Подозреваемый</div>
+                    <div class="method-exp">Начальное звание</div>
                 </div>
                 <div class="method-item">
                     <div class="method-icon">👮‍♂️</div>
-                    <div class="method-name">Стажер (Ур. 2)</div>
-                    <div class="method-exp">1,200 XP</div>
+                    <div class="method-name">Стажер</div>
+                    <div class="method-exp">Первые успехи</div>
                 </div>
                 <div class="method-item">
                     <div class="method-icon">🕵️</div>
-                    <div class="method-name">Детектив (Ур. 5)</div>
-                    <div class="method-exp">7,500 XP</div>
+                    <div class="method-name">Детектив</div>
+                    <div class="method-exp">Опытный сыщик</div>
                 </div>
                 <div class="method-item">
                     <div class="method-icon">👑</div>
-                    <div class="method-name">Капитан (Ур. 10)</div>
-                    <div class="method-exp">50,000 XP</div>
+                    <div class="method-name">Капитан</div>
+                    <div class="method-exp">Руководитель</div>
                 </div>
                 <div class="method-item">
                     <div class="method-icon">🎖️</div>
-                    <div class="method-name">Генерал (Ур. 14)</div>
-                    <div class="method-exp">175,000 XP</div>
+                    <div class="method-name">Генерал</div>
+                    <div class="method-exp">Высший ранг</div>
                 </div>
                 <div class="method-item">
                     <div class="method-icon">👨‍⚖️</div>
-                    <div class="method-name">Шеф Полиции (Ур. 15)</div>
-                    <div class="method-exp">235,000 XP</div>
+                    <div class="method-name">Шеф Полиции</div>
+                    <div class="method-exp">Элитный детектив</div>
                 </div>
                 <div class="method-item">
                     <div class="method-icon">🏆</div>
-                    <div class="method-name">Мастер-Детектив (Ур. 18)</div>
-                    <div class="method-exp">560,000 XP</div>
+                    <div class="method-name">Мастер-Детектив</div>
+                    <div class="method-exp">Признанный мастер</div>
                 </div>
                 <div class="method-item">
                     <div class="method-icon">👑</div>
-                    <div class="method-name">Легенда (Ур. 20)</div>
-                    <div class="method-exp">1,000,000 XP</div>
+                    <div class="method-name">Легенда</div>
+                    <div class="method-exp">Высшее достижение</div>
                 </div>
             </div>
 
             <!-- Новый блок про специализации -->
             <div class="specializations-section">
-                <h4>🎯 Мастерство по типам преступлений:</h4>
+                <h4>🎯 Специализации детектива:</h4>
                 <div class="specializations-grid">
                     <div class="spec-item">
                         <span class="spec-icon">🔪</span>
@@ -1576,8 +1573,8 @@
                     </div>
                 </div>
                 <p class="spec-description">
-                    Каждая специализация имеет 10 уровней мастерства.<br>
-                    Получайте 30% от общего опыта за дела определенного типа.
+                    Развивайте мастерство в разных типах дел.<br>
+                    Каждая специализация дает уникальные награды.
                 </p>
             </div>
         </div>
