--- a/public/index.html
+++ b/public/index.html
@@ -1747,7 +1747,7 @@
 
                 // Переходим в профиль
                 console.log('[Profile] Переход в профиль...');
-                window.location.href = '/profile.html';
+                window.location.href = '/profile';
 
             } catch (error) {
                 console.error('[Profile] Ошибка:', error);
