--- a/public/index.html
+++ b/public/index.html
@@ -13,10 +13,8 @@
     <meta name="theme-color" content="#0A0A0A">
     <meta name="description" content="Интерактивная игра-викторина с криминальными историями">
 
-    <!-- Подключение Telegram WebApp API ПЕРВЫМ с защитой SRI -->
-    <script src="https://telegram.org/js/telegram-web-app.js"
-        integrity="sha384-E7bZJoZ9+8DJxhEo4jfK8t8XhCJaNu7xG5QbR4Zt8KYdZ9Q8rHCjW9GjS0JxB6V3"
-        crossorigin="anonymous"></script>
+    <!-- Подключение Telegram WebApp API ПЕРВЫМ -->
+    <script src="https://telegram.org/js/telegram-web-app.js"></script>
 
     <style>
         :root {
@@ -1673,9 +1671,14 @@
 
         function initTelegramWebApp() {
             console.log('[TG WebApp] Инициализация...');
+            console.log('[TG WebApp] window.Telegram:', typeof window.Telegram);
+            console.log('[TG WebApp] window.Telegram.WebApp:', typeof window.Telegram?.WebApp);
 
             if (typeof window !== 'undefined' && window.Telegram && window.Telegram.WebApp) {
                 tg = window.Telegram.WebApp;
+                console.log('[TG WebApp] Объект tg:', tg);
+                console.log('[TG WebApp] tg.initData:', tg.initData);
+                console.log('[TG WebApp] tg.initDataUnsafe:', tg.initDataUnsafe);
 
                 try {
                     tg.ready();
@@ -1697,12 +1700,15 @@
                 }
             } else {
                 console.log('[TG WebApp] Запуск вне Telegram');
+                console.log('[TG WebApp] Доступные объекты window.Telegram:', window.Telegram);
             }
         }
 
         // Обработчик кнопки профиля
         async function handleProfileAccess() {
             console.log('[Profile] Доступ к профилю...');
+            console.log('[Profile] tg объект:', tg);
+            console.log('[Profile] tg.initData:', tg?.initData);
 
             try {
                 // Проверяем существующий токен
@@ -1714,7 +1720,13 @@
 
                     if (!tg || !tg.initData) {
                         console.error('[Profile] Нет данных Telegram WebApp');
-                        alert('Ошибка: приложение должно быть запущено из Telegram');
+                        console.error('[Profile] tg:', tg);
+                        console.error('[Profile] tg?.initData:', tg?.initData);
+                        console.error('[Profile] window.Telegram:', window.Telegram);
+
+                        // Пробуем без авторизации для тестирования
+                        console.log('[Profile] Пробуем перейти без авторизации...');
+                        window.location.href = '/profile';
                         return;
                     }
 
@@ -1751,6 +1763,7 @@
 
             } catch (error) {
                 console.error('[Profile] Ошибка:', error);
+                console.error('[Profile] Стек ошибки:', error.stack);
                 alert('Ошибка доступа к профилю. Проверьте соединение и попробуйте снова.');
             }
         }
